Fixed .time alignment

--- a/less/base/typography.less
+++ b/less/base/typography.less
@@ -49,7 +49,7 @@ h5 {
 	font-size: 10pt;
 	text-transform: uppercase;
 	float: left;
-	margin: 2px 0 0 0;
+	margin: -3px 0 0 0;
 }
 
 .light {
